A new version of My Tester is out. It is only for Composer 2.2 or later. It removes previously deprecated stuff. It is possible to suppress warnings about no performed assertion on a test method/test case with attribute NoAssertions.

Data providers can now also return iterable objects not just arrays. Data providers can now also be static methods from other classes, just use attribute DataProviderExternal. It is also possible to define data sets without a method with attribute Data.

Interface ITesterExtension was changed - it has new method getName and was changed into an event subscriber.

Interface IResultsFormatter was changed into an event subscriber. You can extend from class MyTester\ResultsFormatters\AbstractResultsFormatter to make updating a bit easier.

There are new events ExtensionsLoaded, RunnerStarted, RunnerFinished, TestStarted, TestFinished, TestPassed, TestPassedWithWarning, TestFailed and TestSkipped which event subscribers (extensions and result formatters) can now add listeners for.

Automated tests runner can now print list of active extensions along My Tester and PHP version (all of that is handled by InfoExtension).

For complete list of changes since previous version, see CHANGELOG.md.